erDiagram
  ORGANIZATION ||--o{ ORGANIZATION_UNIT : contains
  ORGANIZATION ||--o{ PERSON : scopes
  PERSON ||--o{ EXTERNAL_IDENTITY : has
  PERSON ||--o{ ROLE_ASSIGNMENT : has
  LEARNING_PROGRAM ||--o{ LEARNING_OFFERING : contains
  PERSON ||--o{ PARTICIPATION : participates
  LEARNING_OFFERING ||--o{ PARTICIPATION : receives
  ASSESSMENT_DEFINITION ||--o{ ASSESSMENT_ATTEMPT : defines
  PERSON ||--o{ ASSESSMENT_ATTEMPT : attempts
  ASSESSMENT_ATTEMPT ||--|| ASSESSMENT_RESULT : produces
  CREDENTIAL_DEFINITION ||--o{ CREDENTIAL_AWARD : defines
  PERSON ||--o{ CREDENTIAL_AWARD : earns
